# Mongres

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  compose.yaml
crates/ambiguity-policy/: Cargo.toml
crates/ambiguity-policy/src/: audit.rs  lib.rs
crates/catalog/: Cargo.toml
crates/catalog/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/mongo-executor/: Cargo.toml
crates/mongo-executor/src/: lib.rs
crates/mongo-executor/tests/: delete_integration.rs  select_integration.rs  update_integration.rs
crates/proxy/: Cargo.toml
crates/proxy/src/: ambiguity.rs  auth.rs  lib.rs  main.rs  parameters.rs
crates/proxy/src/ambiguity/: live_tests.rs
crates/proxy/tests/: driver_integration.rs
crates/resolver-client/: Cargo.toml
crates/resolver-client/src/: lib.rs
crates/schema-discovery/: Cargo.toml
crates/schema-discovery/src/: lib.rs  main.rs
crates/schema-discovery/tests/: mongodb_integration.rs
crates/sql-engine/: Cargo.toml
crates/sql-engine/src/: binding.rs  lib.rs  lowering.rs  plan.rs  resolve.rs  tests.rs  type_policy.rs
docker/mongodb/: seed.js
docker/proxy/: Dockerfile
docs/: ACCEPTANCE_CRITERIA.md  DEMO_EVIDENCE.md  GOAL.md  IMPLEMENTATION_CHECKLIST.md  INSTALLATION.md  PLAN.md  PLATFORM_SUPPORT.md  REQUIREMENTS_ALIGNMENT_PLAN.md  SCOPE.md  SWE_STANDARDS.md  TESTING.md  USAGE_GUIDE.md  WRITE_SEMANTICS.md
scripts/: run-demo.sh
services/ambiguity-resolver/: Dockerfile  pyproject.toml
services/ambiguity-resolver/app/: __init__.py  contract.py  main.py  providers.py
services/ambiguity-resolver/tests/: test_main.py
