[workspace]
members = [
    "crates/ambiguity-policy",
    "crates/catalog",
    "crates/common",
    "crates/mongo-executor",
    "crates/proxy",
    "crates/resolver-client",
    "crates/schema-discovery",
    "crates/sql-engine",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
