[package]
name = "mongo-pg-ambiguity-policy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mongo-pg-common = { path = "../common" }
mongo-pg-schema-discovery = { path = "../schema-discovery" }
mongo-pg-sql-engine = { path = "../sql-engine" }
serde = { version = "1", features = ["derive"] }

[lints]
workspace = true
