[package]
name = "mongo-pg-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
mongo-pg-ambiguity-policy = { path = "../ambiguity-policy" }
mongo-pg-catalog = { path = "../catalog" }
mongo-pg-common = { path = "../common" }
mongo-pg-mongo-executor = { path = "../mongo-executor" }
mongo-pg-resolver-client = { path = "../resolver-client" }
mongo-pg-schema-discovery = { path = "../schema-discovery" }
mongo-pg-sql-engine = { path = "../sql-engine" }
mongodb = "3.3"
pgwire = "0.25"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }

[lints]
workspace = true
