[package]
name = "mongo-pg-schema-discovery"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
futures-util = "0.3"
mongo-pg-common = { path = "../common" }
mongodb = "3.3"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
