[project]
name = "mongo-pg-ambiguity-resolver"
version = "0.1.0"
description = "Constrained ambiguity recommendations for mongo-pg-proxy writes"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "python-dotenv>=1.0,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
